[gd_scene load_steps=3 format=3 uid="uid://31awqwru7b70"]

[ext_resource type="Script" path="res://scenes/movementNode/next_scene_node.gd" id="1_yovlr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dhpbo"]
size = Vector2(85, 64)

[node name="NextSceneNode" type="Node2D"]
script = ExtResource("1_yovlr")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_dhpbo")

[node name="DebugName" type="RichTextLabel" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="mouse_entered" from="Area2D" to="." method="_show_scene_transition_cursor"]
[connection signal="mouse_exited" from="Area2D" to="." method="_show_standard_cursor"]
